commit e1906ea
Author: bobhutch <arwystli@gmail.com>
Date:   Sat Dec 16 18:08:09 2017 +0000

    added graticule for google maps

getlocations.admin.inc
getlocations.module
js/getlocations.js
js/getlocations.min.js
js/getlocations_admin.js
js/getlocations_admin.min.js
js/getlocations_admin_1.js
js/getlocations_admin_1.min.js
js/getlocations_graticule.js
js/getlocations_graticule.min.js
js/getlocations_views.js
js/getlocations_views.min.js
js/getlocations_views_1.js
js/getlocations_views_1.min.js
modules/getlocations_leaflet/getlocations_leaflet.module
modules/getlocations_leaflet/js/getlocations_leaflet_providers.js
modules/getlocations_leaflet/js/getlocations_leaflet_providers.min.js
views/getlocations_plugin_style_map.inc

commit 4cc851b
Author: bobhutch <arwystli@gmail.com>
Date:   Sat Dec 16 18:07:32 2017 +0000

    edited css

modules/getlocations_leaflet/plugins/pancontrol/L.Control.Pan.css
modules/getlocations_leaflet/plugins/pancontrol/L.Control.Pan.min.css

commit 218396b
Author: bobhutch <arwystli@gmail.com>
Date:   Wed Nov 8 13:27:44 2017 +0000

    added reset maps to leaflet

CHANGELOG.txt
modules/getlocations_leaflet/getlocations_leaflet.module

commit cb2ed58
Author: bobhutch <arwystli@gmail.com>
Date:   Mon Nov 6 16:59:31 2017 +0000

    more thunderforest maps

CHANGELOG.txt
modules/getlocations_leaflet/getlocations_leaflet.module
modules/getlocations_leaflet/js/getlocations_leaflet_providers.js
modules/getlocations_leaflet/js/getlocations_leaflet_providers.min.js
modules/getlocations_leaflet/plugins/minimap/L.Control.Layers.Minimap.js

commit de729bc
Author: bobhutch <arwystli@gmail.com>
Date:   Mon Nov 6 16:58:47 2017 +0000

    fixed x-index bug

modules/getlocations_leaflet/getlocations_leaflet.css

commit 53f3a50
Author: bobhutch <arwystli@gmail.com>
Date:   Mon Nov 6 08:39:38 2017 +0000

    fixed geocoder mobile detect

CHANGELOG.txt
modules/getlocations_leaflet/getlocations_leaflet.module