@@ -7260,7 +7260,8 @@ function theme_getlocations_show($variables) {
     $output .= '<div class="getlocations_what3words container-inline">';
     if ($defaults['what3words_search']) {
       // textbox
-      $output .= '<div class="getlocations_w3w_img" ><img src="' . base_path() . GETLOCATIONS_PATH . '/images/w3w_bw22.png' . '" title="' . t('what3words') . '"></div>' . '<input type="text" id="edit-getlocations-what3words-search" name="edit-getlocations-what3words-search" value="" size="' . $defaults['what3words_size'] . '" class="form-text" />';
+      $output .= '<div class="getlocations_w3w_img" ><img src="' . base_path() . GETLOCATIONS_PATH . '/images/w3w_bw22.png' . '" title="' . t('what3words') . '"></div>';
+      $output .= '<input type="text" id="edit-getlocations-what3words-search" name="edit-getlocations-what3words-search" value="" size="' . $defaults['what3words_size'] . '" class="form-text" />';
       $output .= '&nbsp;&nbsp;<input type="button" value="' . t('Search') . '" id="edit-getlocations-what3words-search-submit" class="form-submit" />';
       $output .= '<div class="getlocations_w3w_throbber getlocations_w3w_throbber_inactive" id="getlocations_w3w_throbber_' . $mapid . '">&nbsp;&nbsp;&nbsp;&nbsp;</div>';
       $output .= '<br />';
