@@ -64,3 +64,12 @@
 .getlocations_w3w_throbber_inactive {
   background-position: 100% 2px;
 }
+.getlocations_w3w_img {
+  margin-right: 8px;
+}
+.getlocations_w3w_img img {
+  width: 22px;
+  height: 22px;
+  margin-bottom: -6px;
+  margin-top: 10px
+}
