@@ -5947,7 +5947,8 @@ function theme_getlocations_leaflet_map($variables) {
     $output .= '<div class="getlocations_leaflet_what3words container-inline">';
     if ($map_settings['map_settings']['what3words_search']) {
       // textbox
-      $output .= t('what3words') . '&nbsp;&nbsp;<input type="text" id="edit-getlocations-leaflet-what3words-search" name="edit-getlocations-leaflet-what3words-search" value="" size="' . $map_settings['map_settings']['what3words_size'] . '" class="form-text" />';
+      $output .= '<div class="getlocations_w3w_img" ><img src="' . base_path() . GETLOCATIONS_PATH . '/images/w3w_bw22.png' . '" title="' . t('what3words') . '"></div>';
+      $output .= '<input type="text" id="edit-getlocations-leaflet-what3words-search" name="edit-getlocations-leaflet-what3words-search" value="" size="' . $map_settings['map_settings']['what3words_size'] . '" class="form-text" />';
       $output .= '&nbsp;&nbsp;<input type="button" value="' . t('Search') . '" id="edit-getlocations-leaflet-what3words-search-submit" class="form-submit" />';
       $output .= '<div class="getlocations_w3w_throbber getlocations_w3w_throbber_inactive" id="getlocations_w3w_throbber_' . $mapid . '">&nbsp;&nbsp;&nbsp;&nbsp;</div>';
       $output .= '<br />';
